crates/analyzer/tests/snapshots/errors__assign_type_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:4:7
  │
4 │   x = address(0)
  │       ^^^^^^^^^^ this has type `address`; expected type `u256`


